out.txt
   Compiling qams_server v0.1.0 (/home/finley/Desktop/Code/qams/qams_server)
error[E0432]: unresolved import `crate::scorecard`
  --> src/handlers/reports.rs:11:12
   |
11 | use crate::scorecard::parse_scorecard_csv;
   |            ^^^^^^^^^ could not find `scorecard` in the crate root

error[E0425]: cannot find function `parse_scorecard_csv` in module `qams_core::scorecard`
  --> src/handlers/scorecards.rs:36:27
   |
36 |     qams_core::scorecard::parse_scorecard_csv(&form.csv)
   |                           ^^^^^^^^^^^^^^^^^^^ not found in `qams_core::scorecard`

warning: unused variable: `scorecard`
  --> src/handlers/reports.rs:34:18
   |
34 |     let (report, scorecard) = load_report_with_history(&state, id).await?;
   |                  ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_scorecard`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `scorecard`
  --> src/handlers/reports.rs:43:18
   |
43 |     let (report, scorecard) = load_report_with_history(&state, id).await?;
   |                  ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_scorecard`

warning: unused variable: `scorecard`
  --> src/handlers/reports.rs:52:18
   |
52 |     let (report, scorecard) = load_report_with_history(&state, id).await?;
   |                  ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_scorecard`

warning: unused variable: `accumulation_period`
  --> src/handlers/reports.rs:76:9
   |
76 |     let accumulation_period = form.accumulation_period.unwrap_or(DEFAULT_ACCUMULATION_PERIOD);
   |         ^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_accumulation_period`

warning: unused variable: `agents`
  --> src/handlers/reviews.rs:22:9
   |
22 |     let agents    = db::list_agents(&state.db).await?;
   |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_agents`

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
warning: `qams_server` (bin "qams_server") generated 5 warnings
error: could not compile `qams_server` (bin "qams_server") due to 2 previous errors; 5 warnings emitted
